--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en-US">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Wrapping Paper</title>
   </head>
   <body>
-    <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
+    <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
     <main id="content">
       <h1>Hello, Wrapping Paper!</h1>
     </main>
