--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Wrapping Paper</title>
+    <title>Nougat</title>
   </head>
   <body>
     <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
-    <main id="content">
-      <h1>Hello, Wrapping Paper!</h1>
+    <main class="pt-4 text-center" id="content">
+      <img class="mb-2" src="https://image.flaticon.com/icons/svg/375/375614.svg" alt="Nougat" width="260">
+      <h1 class="display-4">Hello, Nougat!</h1>
     </main>
   </body>
 </html>
